Fix overflow on smaller viewport

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,15 +135,11 @@ body {
 .subpage .content-area {
 	background-color: rgb(255, 255, 255);
 	color: black;
-}
-
-.flex-center {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	overflow-y: auto;
 }
 
 /* subpage: legal notices */
+
 .legal p {
 	text-align: justify;
 }
